Rename list of order as orders. Also there was a swagger conflict with the Order type declared in orderController so I renamed it to OrderTemp
